@startuml OmniPlayer_ERD
!theme plain

title ERD-диаграмма базы данных OmniPlayer

skinparam linetype ortho

entity "user" as users {
  * id : UUID (PK)
  --
  * email : VARCHAR(255) UNIQUE
  * username : VARCHAR(100)
  * hashed_password : VARCHAR(255)
  * role : ENUM('user', 'admin')
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
  * avatar_url : VARCHAR(500)
}

entity "track" as tracks {
  * id : UUID (PK)
  --
  * title : VARCHAR(255)
  * artist : VARCHAR(255)
  * duration : INTEGER
  * file_path : VARCHAR(500)
  * source_type : ENUM('local', 'soundcloud', 'url')
  * external_id : VARCHAR(255)
  * cover_url : VARCHAR(500)
  * created_by : UUID (FK -> users.id)
  * created_at : TIMESTAMP
  * metadata : JSONB
}

entity "room" as rooms {
  * id : UUID (PK)
  --
  * name : VARCHAR(100)
  * description : TEXT
  * password : VARCHAR(255) NULL
  * host_id : UUID (FK -> users.id)
  * is_public : BOOLEAN DEFAULT true
  * now_playing_track_id : UUID (FK -> room_tracks.id) NULL
  * playback_position : FLOAT DEFAULT 0
  * playback_state : ENUM('stopped', 'playing', 'paused')
  * playback_generation : INTEGER DEFAULT 0
  * created_at : TIMESTAMP
  * updated_at : TIMESTAMP
}

entity "room_track" as room_tracks {
  * id : UUID (PK)
  --
  * room_id : UUID (FK -> rooms.id)
  * track_id : UUID (FK -> tracks.id)
  * added_by : UUID (FK -> users.id)
  * queue_order : INTEGER
  * status : ENUM('pending', 'loading', 'ready', 'error')
  * created_at : TIMESTAMP
}

entity "user_room" as user_rooms {
  * id : UUID (PK)
  --
  * user_id : UUID (FK -> users.id)
  * room_id : UUID (FK -> rooms.id)
  * joined_at : TIMESTAMP
  * is_active : BOOLEAN DEFAULT true
  * last_seen_at : TIMESTAMP
}

entity "message" as messages {
  * id : UUID (PK)
  --
  * room_id : UUID (FK -> rooms.id)
  * user_id : UUID (FK -> users.id)
  * content : TEXT
  * created_at : TIMESTAMP
}

entity "audit_log" as audit_logs {
  * id : UUID (PK)
  --
  * user_id : UUID (FK -> users.id) NULL
  * action : VARCHAR(100)
  * resource_type : VARCHAR(100)
  * resource_id : UUID
  * details : JSONB
  * ip_address : VARCHAR(45)
  * user_agent : VARCHAR(500)
  * created_at : TIMESTAMP
}

users ||--o{ tracks : "создает"
users ||--o{ rooms : "создает (host)"
users }o--o{ rooms : "участвует"
users ||--o{ messages : "отправляет"
users ||--o{ audit_logs : "создает"

rooms ||--o{ room_tracks : "содержит"
rooms ||--o{ messages : "собирает"

tracks ||--o{ room_tracks : "добавляется в"

@enduml